--- a/blogs-backend/package.json
+++ b/blogs-backend/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "express-validator": "^6.11.1",
     "lodash.isempty": "^4.4.0",
     "lowdb": "^1.0.0",
     "mongoose": "^5.12.12",
